Add "how many?" button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div>Sketch!</div>
     </header>
     <div class="content">
+        <div><button>How Many?</button></div>
         <div class="container-sketch"></div>
     </div>
     <footer>
