--- a/pages/test.html
+++ b/pages/test.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./test.css">
 </head>
 <body>
-    <div class="16 container">
+    <div class="sixteen container">
         <div class="sketch"></div>
         <div class="sketch"></div>
         <div class="sketch"></div>
@@ -26,7 +26,7 @@
         <div class="sketch"></div>
         <div class="sketch"></div>
     </div>
-    <div class="32 container">
+    <div class="thirtytwo container">
         <div class="sketch"></div>
         <div class="sketch"></div>
         <div class="sketch"></div>
@@ -60,7 +60,7 @@
         <div class="sketch"></div>
         <div class="sketch"></div>
     </div>
-    <div class="4 container">
+    <div class="four container">
         <div class="sketch"></div>
         <div class="sketch"></div>
         <div class="sketch"></div>
